[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.204", features = ["derive"]}
serde_json = "1.0.120"
encoding_rs = "0.8.29"
encoding_rs_io = "0.1.7"
btreemultimap = "0.1.1"
bit-vec = "0.8.0"
